feat(cat_photo): add multiple files select on add cat photo, rework routes with cat ownership middleware
