# backend/api/docs/swagger.json
@@ -97,7 +97,7 @@
                 }
             }
         },
-        "/auth/cat/{id}": {
+        "/auth/cat/id/{id}": {
             "get": {
                 "security": [
                     {
@@ -144,7 +144,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/auth/cat/mw/{id}": {
             "put": {
                 "security": [
                     {
@@ -249,7 +251,7 @@
                 }
             }
         },
-        "/auth/cat/{id}/age": {
+        "/auth/cat/mw/{id}/age": {
             "patch": {
                 "security": [
                     {
@@ -307,7 +309,7 @@
                 }
             }
         },
-        "/auth/cat/{id}/description": {
+        "/auth/cat/mw/{id}/description": {
             "patch": {
                 "security": [
                     {
@@ -365,7 +367,7 @@
                 }
             }
         },
-        "/auth/cat/{id}/name": {
+        "/auth/cat/mw/{id}/name": {
             "patch": {
                 "security": [
                     {
@@ -423,14 +425,14 @@
                 }
             }
         },
-        "/auth/cat/{id}/photo/add": {
+        "/auth/cat/mw/{id}/photo/add": {
             "post": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Загружает фотографию для указанного кота",
+                "description": "Загружает фотографию для указанного кота (не более 20 файлов)",
                 "consumes": [
                     "multipart/form-data"
                 ],
@@ -438,7 +440,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "cat"
+                    "cat-photo"
                 ],
                 "summary": "Загрузить фото кота",
                 "parameters": [
@@ -450,17 +452,15 @@
                         "required": true
                     },
                     {
-                        "type": "file",
-                        "description": "Файл изображения",
-                        "name": "file",
+                        "type": "array",
+                        "items": {
+                            "type": "file"
+                        },
+                        "collectionFormat": "csv",
+                        "description": "Файлы изображений",
+                        "name": "files",
                         "in": "formData",
                         "required": true
-                    },
-                    {
-                        "type": "boolean",
-                        "description": "Сделать главным фото",
-                        "name": "is_primary",
-                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -479,13 +479,13 @@
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/entities.ErrorEntity"
+                            "$ref": "#/definitions/entities.CatPhotoUploadResponse"
                         }
                     }
                 }
             }
         },
-        "/auth/cat/{id}/photo/{photoID}": {
+        "/auth/cat/mw/{id}/photo/{photoID}": {
             "delete": {
                 "security": [
                     {
@@ -500,7 +500,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "cat"
+                    "cat-photo"
                 ],
                 "summary": "Удаление фото кота по ID",
                 "parameters": [
@@ -541,8 +541,8 @@
                 }
             }
         },
-        "/auth/cat/{id}/photo/{photoID}/primary": {
-            "post": {
+        "/auth/cat/mw/{id}/photo/{photoID}/primary": {
+            "patch": {
                 "security": [
                     {
                         "ApiKeyAuth": []
@@ -556,7 +556,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "cat"
+                    "cat-photo"
                 ],
                 "summary": "Выбор основного фото кота",
                 "parameters": [
@@ -580,6 +580,55 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/entities.CatPhotoSetPrimaryResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/entities.ErrorEntity"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/entities.ErrorEntity"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/cat/photo/{photoID}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Получение всей информации о фото кота",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "cat-photo"
+                ],
+                "summary": "Получение фото кота",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Photo ID",
+                        "name": "photoID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entities.CatPhoto"
                         }
                     },
                     "400": {
@@ -1007,6 +1056,35 @@
                 }
             }
         },
+        "entities.CatPhoto": {
+            "type": "object",
+            "properties": {
+                "cat_id": {
+                    "type": "integer"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "file_name": {
+                    "type": "string"
+                },
+                "file_size": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "is_primary": {
+                    "type": "boolean"
+                },
+                "mime_type": {
+                    "type": "string"
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
         "entities.CatPhotoSetPrimaryResponse": {
             "type": "object",
             "properties": {
@@ -1015,7 +1093,44 @@
                 }
             }
         },
+        "entities.CatPhotoUploadError": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                },
+                "file_name": {
+                    "type": "string"
+                }
+            }
+        },
         "entities.CatPhotoUploadResponse": {
+            "type": "object",
+            "properties": {
+                "errors": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entities.CatPhotoUploadError"
+                    }
+                },
+                "failed_count": {
+                    "type": "integer"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "uploaded_count": {
+                    "type": "integer"
+                },
+                "uploaded_photos": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entities.CatPhotoUploadSuccess"
+                    }
+                }
+            }
+        },
+        "entities.CatPhotoUploadSuccess": {
             "type": "object",
             "properties": {
                 "file_name": {
